Fix displaying modal's body on mobile devices.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -393,3 +393,8 @@ table.dataTable thead .sorting:after {
 .panel-yellow a:hover {
     color: #df8a13;
 }
+
+.modal-body {
+    white-space: normal;
+    text-align: justify;
+}
